# hacs-unifiprotect-2way-audio

./: ARCHITECTURE.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  hacs.json  info.md  pyproject.toml  requirements-dev.txt
.github/workflows/: auto-version-pr.yml  ci.yml  release.yml  test.yml
custom_components/unifiprotect_2way_audio/: __init__.py  camera.py  config_flow.py  const.py  frontend.py  manager.py  manifest.json  media_player.py  microphone.py  select.py  services.yaml  strings.json  switch.py  websocket_api.py
custom_components/unifiprotect_2way_audio/translations/: en.json
custom_components/unifiprotect_2way_audio/www/: unifi-2way-audio.js  unifiprotect-2way-audio-card.js
docs/: UI_GUIDE.md
docs/examples/: automations.md  lovelace_cards.md  reverse_proxy_configs.md
tests/: __init__.py  conftest.py  test_config_flow.py  test_const.py  test_init.py  test_switch.py
www/community/unifiprotect-2way-audio-card/: unifiprotect-2way-audio-card.js
